tambah 4 pilihan menu

--- a/produk.html
+++ b/produk.html
@@ -244,7 +244,7 @@
         updateSelect()
 
         var sumber = "https://rikikurnia.com/prakerja/api/kopi"
-        var sumber2 = "data.json"
+        var sumber2 = "data.json?1"
 
         $.getJSON(sumber2).then(database => {
             semua_produk = database
